<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_header"
            android:id="@+id/header"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_header_bottom"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_popular_movies"
            android:id="@+id/button_popular_movies"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_stock_hawk"
            android:id="@+id/button_stock_hawk"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_build_it_bigger"
            android:id="@+id/button_build_it_bigger"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_make_your_app_material"
            android:id="@+id/button_make_your_app_material"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_go_ubiquitous"
            android:id="@+id/button_go_ubiquitous"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_capstone"
            android:id="@+id/button_capstone"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</FrameLayout>
